// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkModalInner should render correctly 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly when is iPhone 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default bpk-modal--full-screen"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly when it does not fills the screen on mobile 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly when it has a className 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default my-classname bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly when it is fullscreen 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default bpk-modal--full-screen"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with a custom content classname 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded my-classname"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with an accessory view 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <div
          class="bpk-navigation-bar__leading-item bpk-navigation-bar__leading-item--default"
        >
          <span
            class="bpk-modal__accessory-view"
          >
            <span
              class="bpk-modal__leading-button"
            >
              <button
                class="bpk-link"
                label="Close"
                type="button"
              >
                <div>
                  Testing
                </div>
              </button>
            </span>
          </span>
        </div>
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded my-classname"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with closeText prop 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            class="bpk-link bpk-modal__close-button bpk-modal__close-button-style--default"
            type="button"
          >
            Dismiss
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with no padding 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with wide prop 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal__modal-style--default bpk-modal--wide bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-navigation-bar--default bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <div
          class="bpk-navigation-bar__trailing-item bpk-navigation-bar__trailing-item-default"
        >
          <button
            aria-label="Close"
            class="bpk_close_button__default bpk-modal__close-button bpk-modal__close-button-style--default"
            title="Close"
            type="button"
          >
            <span
              class="bpk_close_button__icon"
            >
              <svg
                aria-hidden="true"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
                />
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;
